--- a/sistemacafeteria/web/WEB-INF/jsp/login.html
+++ b/sistemacafeteria/web/WEB-INF/jsp/login.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de Sesión - Orgánico Cafetería</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
     <div class="login-container">
-        <div class="login-header">
-            ORGÁNICO CAFETERÍA
-        </div>
         <!-- Agregamos el action para redirigir a dashboard.html -->
-        <form class="login-form" action="dashboard.html" method="GET" target="_blank">
-            <h2>Ingrese sus credenciales de acceso</h2>
+        <form class="login-form" action="index.html" method="GET" target="_blank">
+            <h1>Bienvenido</h1>
+            <p>Por favor, ingrese sus credenciales para acceder.</p>
             <label for="username">Ingrese su nombre de usuario</label>
             <input type="text" id="username" placeholder="Nombre de usuario" required>
-            
+
             <label for="password">Ingrese su contraseña</label>
             <input type="password" id="password" placeholder="Contraseña" required>
-            
+            <div class="parrafo-makanaki">
+                <p>Si no cuenta con un usuario, por favor, contactarse con su administrador.
+                </p>
+            </div>
+
             <button type="submit">Iniciar sesión</button>
         </form>
     </div>
 </body>
-</html>
 
+</html>
