--- a/sistemacafeteria/web/WEB-INF/jsp/login.html
+++ b/sistemacafeteria/web/WEB-INF/jsp/login.html
@@ -7,9 +7,10 @@
     <title>Inicio de Sesión - Orgánico Cafetería</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
 </head>
-
+<p>
+    dfkf
+</p>
 <body>
     <div class="login-container">
         <!-- Agregamos el action para redirigir a dashboard.html -->
