--- a/sistemacafeteria/web/WEB-INF/jsp/apertura-caja.html
+++ b/sistemacafeteria/web/WEB-INF/jsp/apertura-caja.html
@@ -28,7 +28,7 @@
             <i class="fa fa-chart-bar"></i>
             <span>Reportes</span>
         </a>
-        <a href="configuracion.html" class="opcion-menu">
+        <a href="config.html" class="opcion-menu">
             <i class="fa fa-cogs"></i>
             <span>Configuración</span>
         </a>
