--- a/sistemacafeteria/web/WEB-INF/jsp/ventas.html
+++ b/sistemacafeteria/web/WEB-INF/jsp/ventas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventario - Orgánico Cafetería</title>
+    <title>Ventas - Orgánico Cafetería</title>
     <link rel="stylesheet" href="barra_lateral.css">
     <link rel="stylesheet" href="ventas.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -44,7 +44,7 @@
     </div>
 
     <!-- Contenido principal -->
-    <div class="contenido-principal">
+    <div class="contenido-principal-ventas">
         <h1>VENTA</h1>
         <div class="encabezado">
             <h2>Lista de ventas</h2>
