--- a/sistemacafeteria/web/WEB-INF/jsp/config.html
+++ b/sistemacafeteria/web/WEB-INF/jsp/config.html
@@ -51,19 +51,19 @@
                 <h2>Mi Usuario</h2>
                 <form>
                     <label>Nombres completos</label>
-                    <input type="text" value="Roberto Paolo" disabled>
+                    <input type="text" value="Roberto Paolo">
                     
                     <label>Apellidos</label>
-                    <input type="text" value="Crisóstomo Berrocal" disabled>
+                    <input type="text" value="Crisóstomo Berrocal">
 
                     <label>Número de documento de identidad</label>
-                    <input type="text" value="71776762" disabled>
+                    <input type="text" value="71776762">
 
                     <label>Código de empleado</label>
-                    <input type="text" value="01" disabled>
+                    <input type="text" value="01">
 
                     <label>Teléfono</label>
-                    <input type="text" value="934 401 034" disabled>
+                    <input type="text" value="934 401 034">
 
                     <label>Editar permisos</label>
                     <select>
