--- a/sistemacafeteria/web/WEB-INF/jsp/ver-total-ventas.html
+++ b/sistemacafeteria/web/WEB-INF/jsp/ver-total-ventas.html
@@ -6,6 +6,7 @@
     <title>Inventario - Orgánico Cafetería</title>
     <link rel="stylesheet" href="barra_lateral.css">
     <link rel="stylesheet" href="ventas.css">
+    <link rel="stylesheet" href="ver-total-ventas.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
