--- a/sistemacafeteria/web/WEB-INF/jsp/editar-carta.html
+++ b/sistemacafeteria/web/WEB-INF/jsp/editar-carta.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventario - Orgánico Cafetería</title>
+    <title>Editar carta - Orgánico Cafetería</title>
     <link rel="stylesheet" href="barra_lateral.css">
     <link rel="stylesheet" href="inventario.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -48,7 +48,6 @@
     <!-- Contenido principal -->
     <div class="contenido-principal">
         <h1>VENTA/EDITAR CARTA</h1>
-
         <h2>Lista de productos</h2>
         <!-- Lista de productos -->
         <div class="lista-productos">
