--- a/sistemacafeteria/web/WEB-INF/vistas/login.html
+++ b/sistemacafeteria/web/WEB-INF/vistas/login.html
@@ -6,12 +6,19 @@
     <title>Inicio de Sesión - Orgánico Cafetería</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Radley:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="login-container">
+        <div class="logo-container">
+            <h1 class="logo">ORGANICO</h1>
+            <h2 class="sublogo">CAFETERIA</h2>
+        </div>
+        
+        
         <!-- Agregamos el action para redirigir a dashboard.html -->
         <form class="login-form" action="index.html" method="GET" target="_blank">
-            <h1>ORGANICO CAFETERIA</h1>
             <p>Por favor, ingrese sus credenciales para acceder.</p>
             <label for="username">Ingrese su nombre de usuario</label>
             <input type="text" id="username" placeholder="Nombre de usuario" required>
